--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,12 @@
+### PROTECT FILES ###
+<FilesMatch "\.(htaccess|htpasswd|ini|fla|psd|log|sh)$">
+Order Allow,Deny
+Deny from all
+</FilesMatch>
+
 RewriteEngine on
-RewriteRule dupa index.hmtl
+RewriteRule Rafal-Strus index.html
+RewriteRule bateria-stan Bateria.html
+RewriteRule linux-unix linux.html
+RewriteRule diament diament.html
+RewriteRule blue-tooth bluetooth.html
